Fix query parameters collecting #2326